@@ -26,6 +26,9 @@ import org.apache.hadoop.conf.Configuration;
 import junit.framework.TestCase;
 
 public class TestChecksumFileSystem extends TestCase {
+  static final String TEST_ROOT_DIR
+    = System.getProperty("test.build.data","build/test/data/work-dir/localfs");
+
   public void testgetChecksumLength() throws Exception {
     assertEquals(8, ChecksumFileSystem.getChecksumLength(0L, 512));
     assertEquals(12, ChecksumFileSystem.getChecksumLength(1L, 512));
@@ -38,10 +41,7 @@ public class TestChecksumFileSystem extends TestCase {
                  ChecksumFileSystem.getChecksumLength(10000000000000L, 10));    
   } 
   
-  public void testVerifyChecksum() throws Exception {
-    String TEST_ROOT_DIR
-    = System.getProperty("test.build.data","build/test/data/work-dir/localfs");
-    
+  public void testVerifyChecksum() throws Exception {    
     Configuration conf = new Configuration();
     LocalFileSystem localFs = FileSystem.getLocal(conf);
     Path testPath = new Path(TEST_ROOT_DIR, "testPath");
@@ -54,9 +54,15 @@ public class TestChecksumFileSystem extends TestCase {
     fout.write("testing you".getBytes());
     fout.close();
 
+    // Exercise some boundary cases - a divisor of the chunk size
+    // the chunk size, 2x chunk size, and +/-1 around these.
     TestLocalFileSystem.readFile(localFs, testPath, 128);
+    TestLocalFileSystem.readFile(localFs, testPath, 511);
     TestLocalFileSystem.readFile(localFs, testPath, 512);
+    TestLocalFileSystem.readFile(localFs, testPath, 513);
+    TestLocalFileSystem.readFile(localFs, testPath, 1023);
     TestLocalFileSystem.readFile(localFs, testPath, 1024);
+    TestLocalFileSystem.readFile(localFs, testPath, 1025);
 
     localFs.delete(localFs.getChecksumFile(testPath), true);
     assertTrue("checksum deleted", !localFs.exists(localFs.getChecksumFile(testPath)));
@@ -75,9 +81,80 @@ public class TestChecksumFileSystem extends TestCase {
     assertTrue("error reading", errorRead);
     
     //now setting verify false, the read should succeed
-    localFs.setVerifyChecksum(false);
-    String str = TestLocalFileSystem.readFile(localFs, testPath, 1024);
-    assertTrue("read", "testing".equals(str));
+    try {
+      localFs.setVerifyChecksum(false);
+      String str = TestLocalFileSystem.readFile(localFs, testPath, 1024);
+      assertTrue("read", "testing".equals(str));
+    } finally {
+      // reset for other tests
+      localFs.setVerifyChecksum(true);
+    }
     
+  }
+
+  public void testMultiChunkFile() throws Exception {
+    Configuration conf = new Configuration();
+    LocalFileSystem localFs = FileSystem.getLocal(conf);
+    Path testPath = new Path(TEST_ROOT_DIR, "testMultiChunk");
+    FSDataOutputStream fout = localFs.create(testPath);
+    for (int i = 0; i < 1000; i++) {
+      fout.write(("testing" + i).getBytes());
+    }
+    fout.close();
+
+    // Exercise some boundary cases - a divisor of the chunk size
+    // the chunk size, 2x chunk size, and +/-1 around these.
+    TestLocalFileSystem.readFile(localFs, testPath, 128);
+    TestLocalFileSystem.readFile(localFs, testPath, 511);
+    TestLocalFileSystem.readFile(localFs, testPath, 512);
+    TestLocalFileSystem.readFile(localFs, testPath, 513);
+    TestLocalFileSystem.readFile(localFs, testPath, 1023);
+    TestLocalFileSystem.readFile(localFs, testPath, 1024);
+    TestLocalFileSystem.readFile(localFs, testPath, 1025);
+  }
+
+  /**
+   * Test to ensure that if the checksum file is truncated, a
+   * ChecksumException is thrown
+   */
+  public void testTruncatedChecksum() throws Exception { 
+    Configuration conf = new Configuration();
+    LocalFileSystem localFs = FileSystem.getLocal(conf);
+    Path testPath = new Path(TEST_ROOT_DIR, "testtruncatedcrc");
+    FSDataOutputStream fout = localFs.create(testPath);
+    fout.write("testing truncation".getBytes());
+    fout.close();
+
+    // Read in the checksum
+    Path checksumFile = localFs.getChecksumFile(testPath);
+    FileSystem rawFs = localFs.getRawFileSystem();
+    FSDataInputStream checksumStream = rawFs.open(checksumFile);
+    byte buf[] = new byte[8192];
+    int read = checksumStream.read(buf, 0, buf.length);
+    checksumStream.close();
+
+    // Now rewrite the checksum file with the last byte missing
+    FSDataOutputStream replaceStream = rawFs.create(checksumFile);
+    replaceStream.write(buf, 0, read - 1);
+    replaceStream.close();
+
+    // Now reading the file should fail with a ChecksumException
+    try {
+      TestLocalFileSystem.readFile(localFs, testPath, 1024);
+      fail("Did not throw a ChecksumException when reading truncated " +
+           "crc file");
+    } catch(ChecksumException ie) {
+    }
+
+    // telling it not to verify checksums, should avoid issue.
+    try {
+      localFs.setVerifyChecksum(false);
+      String str = TestLocalFileSystem.readFile(localFs, testPath, 1024);
+      assertTrue("read", "testing truncation".equals(str));
+    } finally {
+      // reset for other tests
+      localFs.setVerifyChecksum(true);
+    }
+
   }
 }
